# docs/swagger.json
@@ -62,6 +62,30 @@
                         "description": "bank CSV file upload",
                         "name": "bank_csv",
                         "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "bank CSV file upload",
+                        "name": "bank_csv",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "bank CSV file upload",
+                        "name": "bank_csv",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "bank CSV file upload",
+                        "name": "bank_csv",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "bank CSV file upload",
+                        "name": "bank_csv",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
